# mercati

./: .gitignore  CONFIG_ORCHESTRATION.md  CONFIG_RESPONSIBILITY_MAP.md  INTEGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.txt  README.md  TRAINING_CONFIG_COMPARISON.md  VDW_INTEGRATION_GUIDE.md  credentials.json  data_daily.csv  installation_guide.txt  log.txt  main.py  pyproject.toml  report.txt  requirements.txt  thermo_diagnostics.py  todo  token.json  upload_to_drive.py
checkpoints/: ddpg_1m.pth  ddpg_best_1m.pth  normalizer_1d.npz  normalizer_2m.npz  pred_1d_30.pth
config/: config.yaml
config/alpaca/: default.yaml
config/buyer/: default.yaml  minute.yaml
config/data/: default.yaml
config/frequency/: daily.yaml  minute.yaml
config/model/: cnn.yaml  rl.yaml
config/paths/: default.yaml
config/prediction/: default.yaml  minute.yaml
config/training/: default.yaml  minute.yaml
modelli/: alpaca_live.py  calibrate_vdw.py  ddpg.py  device_setup.py  dqn.py  evaluate_pred.py  intraday_thermo.py  obs_normalizer.py  pred.py  signal_trust.py  thermo_innovations.py  thermo_new_features.py  thermo_state_builder.py  thermo_statistics.py  thermodynamics.py  trade.py  trading_env.py  utils.py  walk_forward.py
outputs/2026-03-17/11-22-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-17/11-25-35/.hydra/: hydra.yaml
outputs/2026-03-17/11-34-12/: model.pth
outputs/2026-03-17/11-39-32/: model.pth
outputs/2026-03-17/11-39-59/: model.pth
outputs/2026-03-17/11-40-03/: model.pth
outputs/2026-03-17/11-40-17/: model.pth
results/: alpaca_replay_log_2m.csv  alpaca_replay_portfolio_2m.csv  summary_per_ticker.csv  trade_log.csv  value_per_ticker.csv
(+552 files in other folders)
