[project]
name = "mercati"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"alpaca-py>=0.43.2",
	"fredapi>=0.5.2",
	"google-api-python-client>=2.193.0",
	"google-auth-httplib2>=0.3.1",
	"google-auth-oauthlib>=1.3.1",
	"gymnasium>=1.2.3",
	"hydra-core>=1.3.2",
	"matplotlib>=3.10.0",
	"pandas>=2.3.0",
	"pandas-datareader>=0.10.0",
	"python-dotenv>=1.2.2",
	"pytorch-lightning>=2.6.1",
	"scikit-learn>=1.5.0",
	"scipy>=1.17.1",
	"seaborn>=0.13.0",
	"stable-baselines3>=2.8.0",
	"torch>=2.10.0",
	"yfinance>=0.2.66",
]
